syntax = "proto3";

package pb;

option go_package = "github.com/DebdipWritesCode/Munshiji/backend/pb";

message DeleteDelegateRequest {
  int32 delegate_id = 1;
}

message DeleteDelegateResponse {
  bool success = 1;
}